--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* @import url('https://fonts.googleapis.com/css2?family=Kanit:ital@0;1&display=swap');
+.font{
+  font-family: 'Kanit', sans-serif;
+} */
+/* .bg-money{ */
+  /* background-image: url(https://www.teahub.io/photos/full/2-23278_3d-abstract-enchanting-time-is-money-wallpaper-background.jpg); */
+  
+  
+ 
+  
+/* } */
+/* .card-size{
+  width:350px;
+} */
+ /* .home-bg{ */
+  /* background-image: linear-gradient(to right top, #23b0b5, #4fb5b9, #6bbabd, #83bfc1, #98c4c5); */
+  /* background-color: rgb(218, 255, 246); */
+/* }  */
