--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@
   width:350px;
 } */
  .home-bg{
-  background:url(https://cdn.wallpapersafari.com/42/71/yoD8KJ.jpg);
-  /* background-blend-mode: luminosity; */
+  background:rgba(0,0,0,0.3)url(https://cdn.wallpapersafari.com/42/71/yoD8KJ.jpg);
+  background-blend-mode:darken;
   background-repeat: no-repeat;
   background-size:cover;
   height: 100vh;
