--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,8 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Kanit:ital@0;1&display=swap');
-.font{
-  font-family: 'Kanit', sans-serif;
-} */
-/* .bg-money{ */
-  /* background-image: url(https://www.teahub.io/photos/full/2-23278_3d-abstract-enchanting-time-is-money-wallpaper-background.jpg); */
-  
-  
- 
-  
-/* } */
-/* .card-size{
-  width:350px;
-} */
- .home-bg{
-  background:rgba(0,0,0,0.3)url(https://cdn.wallpapersafari.com/42/71/yoD8KJ.jpg);
+ /* .home-bg{
+  background:rgba(0,0,0,0.8)url(https://cdn.wallpapersafari.com/42/71/yoD8KJ.jpg);
   background-blend-mode:darken;
   background-repeat: no-repeat;
   background-size:cover;
-  height: 100vh;
-} 
+  height: 100%; */
+  /* width: 100%; */
+/* }  */
