--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
- /* .home-bg{
-  background:rgba(0,0,0,0.8)url(https://cdn.wallpapersafari.com/42/71/yoD8KJ.jpg);
-  background-blend-mode:darken;
-  background-repeat: no-repeat;
-  background-size:cover;
-  height: 100%; */
-  /* width: 100%; */
-/* }  */
-
+*{
+  padding:0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .box{
   width: 300px !important;
 }
